--- a/kankan/pages/main/news.html
+++ b/kankan/pages/main/news.html
@@ -37,6 +37,7 @@
 			<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
   			<div class="mui-scroll">
 				<ul id="OA_task_1" class="mui-table-view">
+					
 				<!--<li class="mui-table-view-cell">
 					<div class="mui-slider-right mui-disabled">
 						<a class="mui-btn mui-btn-red">删除</a>
@@ -46,6 +47,7 @@
 					</div>
 				</li>-->
 				</ul>
+				<div id="nomoretext" style="margin-top: 6%;text-align: center;font-size: 16px;color: #666666;"></div>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -128,7 +130,14 @@
 			//show message
 			function showmessage(results){
 				if(results.data.message==""){
+					$("#nomoretext").html(TextMessage.nomore);
+					$(".mui-pull-caption").hide();
+					$("#nomoretext").show();
 					mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
+					return;
+				}else{
+					$(".mui-pull-caption").show();
+					$("#nomoretext").hide();
 				}
 				var messarr=results.data.message;
 				page=results.data.page.page;
