评论页面正在加载图片显示

--- a/kankan/pages/main/products/request.html
+++ b/kankan/pages/main/products/request.html
@@ -267,6 +267,9 @@
 								break;
 							}
 						}
+						if(transpro==""){
+							transpro=others[ot].trans.commodity[0];
+						}
 						var comm_name = HTMLDecode(transpro.comm_name);
 						var comm_img = transpro.comm_img;
 						var trans_type = others[ot].trans.trans_type;
