--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -16,7 +16,13 @@
 			<h1 class="mui-title lang" data-locale="det_pcercomment"></h1>
 		</header>
 		<div  id="reloadpage" onclick="reloadpage()" style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
-		<div class="mui-content ka_mainbox">
+		<div id="loading" class="mui-content ka_userbox">
+			<div class="spinner">
+				<div class="double-bounce1"></div>
+				<div class="double-bounce2"></div>
+			</div>
+		</div>
+		<div class="mui-content ka_mainbox" style="display: none;">
 			<ul class="mui-table-view">
 			        <li class="mui-table-view-cell">
 			            <div class="mui-pull-left ka_commentsort lang" data-locale="det_all"></div>
@@ -152,6 +158,7 @@
 					},
 					error:function(){
 						$(".mui-content").hide();
+						$("#loading").hide();
 						$("#reloadpage").show();
 					}
 				});
@@ -220,6 +227,8 @@
 					}
 					
 				}
+				$("#loading").hide();
+				$(".ka_mainbox").show();
 			}
 		</script>
 	</body>
