--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/forget_password.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/login/forget_password.html
@@ -123,7 +123,7 @@
 											email: emailBox.value.trim()
 										}
 									});
-									doc.getElementById('email').value="";
+									//doc.getElementById('email').value="";
 								}, 500);
 							},
 							ng: function(data) {
