--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/main.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/main.html
@@ -8,6 +8,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<link rel="stylesheet" href="../../css/mui.min.css" />
+		<link rel="stylesheet" href="../../css/icons-extra.css" />
+		<link rel="stylesheet" href="../../css/iconfontwuliu.css" />
 		<style>
 			html,
 			body {
@@ -22,6 +24,10 @@
 				<span class="mui-icon mui-icon-home"></span>
 				<span class="mui-tab-label lang" data-locale="tab_1"></span>
 			</a>
+			<a class="mui-tab-item" href="products/request.html">
+				<span class="mui-icon mui-icon-extra mui-icon-extra-cart"></span>
+				<span class="mui-tab-label lang" data-locale="tab_5"></span>
+			</a>
 			<a class="mui-tab-item" href="products/product_login.html">
 				<span class="mui-icon mui-icon-camera"></span>
 				<span class="mui-tab-label lang" data-locale="tab_2"></span>
@@ -31,7 +37,7 @@
 				<span class="mui-tab-label lang" data-locale="tab_3"></span>
 			</a>
 			<a class="mui-tab-item" href="logisticslist.html">
-				<span class="mui-icon mui-icon-eye"></span>
+				<span class="mui-icon iconfont icon-wuliu"></span>
 				<span class="mui-tab-label lang" data-locale="tab_4"></span>
 			</a>
 		</nav>
@@ -42,7 +48,7 @@
 		<script type="text/javascript" charset="utf-8">
 			//mui初始化
 			mui.init();
-			var subpages = ['home.html', 'products/product_login.html', 'products/product_want_to_buy.html', 'logisticslist.html'];
+			var subpages = ['home.html', 'products/request.html', 'products/product_login.html', 'products/product_want_to_buy.html', 'logisticslist.html'];
 			var subpage_style = {
 				top: '0px',
 				bottom: '51px'
@@ -53,7 +59,7 @@
 			//创建子页面，首个选项卡页面显示，其它均隐藏；
 			mui.plusReady(function() {
 				var self = plus.webview.currentWebview();
-				for(var i = 0; i < 4; i++) {
+				for(var i = 0; i < 5; i++) {
 					var temp = {};
 					var sub = plus.webview.create(subpages[i], subpages[i], subpage_style);
 					if(i > 0) {
@@ -73,13 +79,28 @@
 				if(targetTab == activeTab) {
 					return;
 				}
-				if (targetTab == "products/product_login.html" || targetTab == "products/product_want_to_buy.html") {
+				if (targetTab == "products/product_login.html" 
+				|| targetTab == "products/product_want_to_buy.html" 
+				|| targetTab == "products/request.html") {
 					if (!Repository.User.isLogin()) {
 						setTimeout(function(){
 							document.querySelector("[href='" + activeTab + "']").classList.add("mui-active");
 							document.querySelector("[href='" + targetTab + "']").classList.remove("mui-active");
 						}, 500);
 						return;
+					}else{
+						// var homePage = plus.webview.currentWebview();
+						if(targetTab == "products/product_login.html"){
+							var homePage =plus.webview.getWebviewById('products/product_login.html');
+							mui.fire(homePage, 'refreshtop');
+						}else if(targetTab == "products/product_want_to_buy.html"){
+							var homePage =plus.webview.getWebviewById('products/product_want_to_buy.html');
+							mui.fire(homePage, 'refreshtop');
+						} else if(targetTab == "products/request.html") {
+							var homePage =plus.webview.getWebviewById('products/request.html');
+							mui.fire(homePage, 'requestpage');
+						}
+						
 					}
 				}
 				//更换标题
