--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/news.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/news.html
@@ -37,6 +37,7 @@
 			<div  id="reloadpage" onclick="reloadpage()"  style="display: none;"><font size="2" class="lang" data-locale="networkerror"></font></div>
   			<div class="mui-scroll">
 				<ul id="OA_task_1" class="mui-table-view">
+					
 				<!--<li class="mui-table-view-cell">
 					<div class="mui-slider-right mui-disabled">
 						<a class="mui-btn mui-btn-red">删除</a>
@@ -46,6 +47,7 @@
 					</div>
 				</li>-->
 				</ul>
+				<div id="nomoretext" style="margin-top: 6%;text-align: center;font-size: 16px;color: #666666;"></div>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
@@ -83,6 +85,9 @@
 		  mui.plusReady(function() {
 		  	$("#pullrefresh").attr("style","margin-top:-3em");
 		  });
+		 $('#reloadpage').on('tap', 'font', function(event) {
+				location.reload();
+			});
 		  //delete message
 		  (function($) {
 		  	var btnArray = [TextMessage.sure, TextMessage.cancel];
@@ -122,13 +127,17 @@
 			});
 				
 		  })(mui)
-		  function reloadpage(){
-				location.reload();
-			}
 			//show message
 			function showmessage(results){
 				if(results.data.message==""){
+					$("#nomoretext").html(TextMessage.nomore);
+					$(".mui-pull-caption").hide();
+					$("#nomoretext").show();
 					mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
+					return;
+				}else{
+					$(".mui-pull-caption").show();
+					$("#nomoretext").hide();
 				}
 				var messarr=results.data.message;
 				page=results.data.page.page;
