--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/product_login.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/product_login.html
@@ -106,7 +106,7 @@
 				</div>
 				<div class="ka_description lang" data-locale="commodity_forbidentext"></div>
 				<div class="ka_userbox">
-					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="commodity_buttonsure" onclick="publishscheck()"></button>
+					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="commodity_buttonsure" onclick="publishscheck()" id="submit"></button>
 				</div>
 				<br/>
 				<div class="showimg"></div>
@@ -140,6 +140,9 @@
 	window.addEventListener("refresh", function(event) {
 		location.reload();
 	});
+	window.addEventListener("refreshtop", function(event) {
+		document.body.scrollTop = document.documentElement.scrollTop = 0;
+	});
 	function daojishu(){
 		var delength=$("#comm_detail").val().trim().length;
 		var cha=1000-delength;
@@ -166,6 +169,7 @@
 		var img = document.createElement("img");
 		img.setAttribute("src", srcval);
 		img.setAttribute("alt", im);
+		img.setAttribute("onerror", "this.src='../../../images/nopic.jpg'");
 		img.setAttribute("class", "z_images");
 		var imgAdd = document.createElement("div");
 		imgAdd.setAttribute("class", "z_addImg");
@@ -459,6 +463,7 @@ function publishscheck(){
 	if (!Repository.User.isEmptyEmail()) {
 		 return;
 	}else{
+		$("#submit").attr("disabled","disabled");
 		publishs();
 	}
 }
@@ -492,6 +497,14 @@ function publishs() {
 		document.publishcomodity.comm_name.focus();
 		return false;
 	}
+	var regStr = /[\uD83C|\uD83D|\uD83E][\uDC00-\uDFFF][\u200D|\uFE0F]|[\uD83C|\uD83D|\uD83E][\uDC00-\uDFFF]|[0-9|*|#]\uFE0F\u20E3|[0-9|#]\u20E3|[\u203C-\u3299]\uFE0F\u200D|[\u203C-\u3299]\uFE0F|[\u2122-\u2B55]|\u303D|[\A9|\AE]\u3030|\uA9|\uAE|\u3030/ig;
+	if(regStr.test(comm_name)){
+	　　mui.toast(TextMessage.noemjoy, {
+			duration: 'long',
+			type: 'div'
+		});
+		return false;
+	}
 	if(comm_name.trim().length>40){
 		mui.toast(TextMessage.pro_namelength, {
 			duration: 'long',
@@ -505,6 +518,13 @@ function publishs() {
 			type: 'div'
 		});
 		document.publishcomodity.comm_detail.focus();
+		return false;
+	}
+	if(regStr.test(comm_detail)){
+	　　mui.toast(TextMessage.noemjoy, {
+			duration: 'long',
+			type: 'div'
+		});
 		return false;
 	}
 	if(comm_detail.trim().length >1000) {
