--- a/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
+++ b/ios_kankan/iOS-SDK/iOS-SDK/HBuilder-Hello/HBuilder-Hello/Pandora/apps/H5B7054BD/www/pages/main/products/product_want_to_buy.html
@@ -59,7 +59,7 @@
 				     <br />
 					<div class="ka_description lang" data-locale="commodity_want_forbidentext"></div>
 					<div class="ka_userbox">
-						<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_want_butonsure" onclick="publishscheck()"></button>
+						<button type="button" class="mui-btn mui-btn-red ka_prologsure lang"  data-locale="commodity_want_butonsure" onclick="publishscheck()" id="submit"></button>
 					</div>
 					<br/>
 					<div class="showimg"></div>
@@ -77,6 +77,9 @@
 $(function() {
 	$(".ka_noborder").attr("placeholder", TextMessage.commodity_descriptionlength);
 });
+	window.addEventListener("refreshtop", function(event) {
+		document.body.scrollTop = document.documentElement.scrollTop = 0;
+	});
 function closekeybord(){
 	preventKeyBoardSubmit.closekeybord();
 }
@@ -97,6 +100,7 @@ function publishscheck(){
 	if (!Repository.User.isEmptyEmail()) {
 		 return;
 	}else{
+		$("#submit").attr("disabled","disabled");
 		publishs();
 	}
 }
@@ -117,6 +121,14 @@ function publishs() {
 		document.publishcomodity.comm_name.focus();
 		return false;
 	}
+	var regStr = /[\uD83C|\uD83D|\uD83E][\uDC00-\uDFFF][\u200D|\uFE0F]|[\uD83C|\uD83D|\uD83E][\uDC00-\uDFFF]|[0-9|*|#]\uFE0F\u20E3|[0-9|#]\u20E3|[\u203C-\u3299]\uFE0F\u200D|[\u203C-\u3299]\uFE0F|[\u2122-\u2B55]|\u303D|[\A9|\AE]\u3030|\uA9|\uAE|\u3030/ig;
+	if(regStr.test(comm_name)){
+	　　mui.toast(TextMessage.noemjoy, {
+			duration: 'long',
+			type: 'div'
+		});
+		return false;
+	}
 	if(comm_name.trim().length>40){
 		mui.toast(TextMessage.TextMessage.pro_namelength, {
 			duration: 'long',
@@ -130,6 +142,13 @@ function publishs() {
 			type: 'div'
 		});
 		document.publishcomodity.comm_detail.focus();
+		return false;
+	}
+	if(regStr.test(comm_detail)){
+	　　mui.toast(TextMessage.noemjoy, {
+			duration: 'long',
+			type: 'div'
+		});
 		return false;
 	}
 	if(comm_detail.trim().length >1000) {
