--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/product_login.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/product_login.html
@@ -106,7 +106,7 @@
 				</div>
 				<div class="ka_description lang" data-locale="commodity_forbidentext"></div>
 				<div class="ka_userbox">
-					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="commodity_buttonsure" onclick="publishscheck()"></button>
+					<button type="button" class="mui-btn mui-btn-red ka_prologsure lang" data-locale="commodity_buttonsure" onclick="publishscheck()" id="submit"></button>
 				</div>
 				<br/>
 				<div class="showimg"></div>
@@ -463,6 +463,7 @@ function publishscheck(){
 	if (!Repository.User.isEmptyEmail()) {
 		 return;
 	}else{
+		$("#submit").attr("disabled","disabled");
 		publishs();
 	}
 }
