--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/requestlist.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/requestlist.html
@@ -64,8 +64,8 @@
 					var translatepage=null;
 					mui('.transli').on('tap','a',function(e) {
 						var tid = this.getAttribute('id');
-						var preView = plus.webview.getWebviewById('request');
-						plus.webview.close(preView);
+//						var preView = plus.webview.getWebviewById('request');
+//						plus.webview.close(preView);
 						mui.openWindow({
 							//id: 'transaction'
 							url: "../../transaction/transaction2.html?transid=" + trans_id,
