--- a/kankan/pages/main/logisticslist.html
+++ b/kankan/pages/main/logisticslist.html
@@ -270,7 +270,8 @@
 						});
 					}
 				},
-				error:function(){
+				error:function(errortypetext){
+					$("#reloadpage").html(errortypetext);
 					$("#reloadpage").show();
 				}
 			});
