--- a/kankan/pages/main/products/pro_commentslist.html
+++ b/kankan/pages/main/products/pro_commentslist.html
@@ -110,7 +110,8 @@
 							$("#comments").html(htmlnull);
 						}
 					},
-					error:function(){
+					error:function(errortypetext){
+						$("#reloadpage").html(errortypetext);
 						$(".mui-content").hide();
 						$("#reloadpage").show();
 					}
