--- a/kankan/pages/main/products/product_login.html
+++ b/kankan/pages/main/products/product_login.html
@@ -463,7 +463,6 @@ function publishscheck(){
 	if (!Repository.User.isEmptyEmail()) {
 		 return;
 	}else{
-		$("#submit").attr("disabled","disabled");
 		publishs();
 	}
 }
@@ -503,6 +502,7 @@ function publishs() {
 			duration: 'long',
 			type: 'div'
 		});
+		document.publishcomodity.comm_name.focus();
 		return false;
 	}
 	if(comm_name.trim().length>40){
@@ -525,6 +525,7 @@ function publishs() {
 			duration: 'long',
 			type: 'div'
 		});
+		document.publishcomodity.comm_detail.focus();
 		return false;
 	}
 	if(comm_detail.trim().length >1000) {
@@ -580,6 +581,7 @@ function publishs() {
 		});
 		return false;
 	}
+	$("#submit").attr("disabled","disabled");
 	var params = {
 		"buy_sell_flag": buy_sell_flag,
 		"comm_name": comm_name,
