用户页面商品文言判断添加，商品编辑页面落品和删除功能添加

--- a/kankan/pages/main/products/commentlist.html
+++ b/kankan/pages/main/products/commentlist.html
@@ -153,6 +153,8 @@
 						emptycontent();
 						if(data=="2001"){
 							//alert(TextMessage.datanull);
+							$("#loading").hide();
+							$(".ka_mainbox").show();
 							//$("ul").hide();
 						}
 					},
