--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -572,7 +572,7 @@
 			for(var ex=0; ex<exhibit_commdata.length;ex++){
 				var k = ex + 1 * 1;
 				var commexid=exhibit_commdata[ex].commodity_id;
-				var commeximg_url=exhibit_commdata[ex].img_url;
+				var commeximg_url=thumbnail(exhibit_commdata[ex].img_url);
 				var realwidth=exhibit_commdata[ex].comm_img_width;
 				var realheight=exhibit_commdata[ex].comm_img_height;
 				var commstatus=exhibit_commdata[ex].status;
